tests/snapshots/branch_config_transitions__transition_case_T03.snap
---
source: tests/branch_config_transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
(empty)
