tests/snapshots/branch_config_transitions__transition_case_T04.snap
---
source: tests/branch_config_transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch feature.
[gherrit] [WARN] The current git configuration does not match the expected state for an unmanaged branch.
[gherrit] [WARN]   - pushRemote: current='dirty-remote', expected='<unset>'
[gherrit] [WARN] Use --force to overwrite manual changes.
