tests/snapshots/branch_config_transitions__transition_case_T08.snap
---
source: tests/branch_config_transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push feature itself.
