tests/snapshots/branch_config_transitions__transition_case_T10.snap
---
source: tests/branch_config_transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature is now unmanaged by GHerrit.
